theme/demos/wireframe/components/experiencefragment/experiencefragment_header.css
/* XF Header style, used on page template */
#main-header-wrapper {
  @apply mb-4 border-b-2 border-solid;

  @screen phone {
    & > .aem-Grid {
      @apply px-0;
    }
  }
}

#main-header {
  @apply text-shade-1 h-20 flex items-center;

  .cmp-image {
    @apply flex h-full items-center justify-center;
  }
}

@screen phone {
  #main-header {
    @apply py-0;

    > .aem-Grid {
      @apply h-full justify-start gap-y-0 px-0;
      grid-template-rows: 5rem 1fr;
    }

    &.open {
      @apply h-screen;

      #mobile-header {
        @apply visible translate-y-0 opacity-100;
      }
      .button .cmp-button {
        background-image: url("../../resources/images/x-icon.png");
      }
    }

    .button {
      @apply w-8 h-20 self-center mx-4 flex items-center z-10;

      .cmp-button {
        @apply bg-transparent rounded bg-no-repeat border-0 h-8 w-8 bg-center;
        background-image: url("../../resources/images/hamburger-menu.png");
      }
    }

    .image {
      @apply absolute inset-0 ml-0 h-20;

      .cmp-image__image {
        @apply max-h-12;
      }
    }
  }

  #mobile-header {
    @apply h-full p-4 border-t-2 border-shade-1 delay-75 opacity-0 translate-y-2;
    transition: transform 250ms, opacity 100ms, visibility 50ms;
    visibility: collapse;

    & > .aem-Grid {
      @apply h-full justify-start items-start;
      grid-template-rows: auto auto 1fr;
    }

    .navigation {
      @apply order-2;

      .cmp-navigation {
        @apply py-2;

        > .cmp-navigation__group {
          @apply flex-col gap-y-4;
        }
      }
    }

    .search {
      @apply order-1;
    }

    .languagenavigation {
      @apply order-3 self-end;
    }
  }
}

.aem-AuthorLayer-Preview.aem-Author--hidePlaceholder,
.aem-AuthorLayer-Edit {
  #main-header {
    @apply h-auto min-h-[5rem];
  }
}

@screen phone {
  .aem-AuthorLayer-Preview.aem-Author--hidePlaceholder,
  .aem-AuthorLayer-Edit {
    #main-header {
      &.open {
        @apply h-full;

        #mobile-header {
          @apply block;
        }
      }
    }

    #mobile-header {
      @apply hidden;
    }
  }
}

